@@ -1,4 +1,4 @@
-$Id: TODO,v 1.11 2002/01/12 17:48:43 psavola Exp $
+$Id: TODO,v 1.12 2004/10/26 05:30:34 psavola Exp $
 
 read list of interfaces with SIOCGIFCONF (AF_INET6 support in the kernel would
 be nice) or from /proc
@@ -8,6 +8,9 @@ interface is up
 
 use getaddrinfo() instead of inet_pton in scanner.l so that DNS names
 can be used
+
+Consider reducing the amount of 'if (MIPv6)' code segments, especially when
+checking for allowed minimum values.  Retain the defaults, though.
 
 Quoting Peter Bieringer (peter@bieringer.de):
 > Das war's schon. Ach ja, wenn Du mal eine neue Version machst, kannst Du
