@@ -1,4 +1,6 @@
-$Id: CHANGES,v 1.30 2004/08/20 07:47:40 psavola Exp $
+$Id: CHANGES,v 1.31 2004/10/26 05:30:34 psavola Exp $
+
+10/16/2004	Update Mobile IPv6 to match RFC 3775, from Greg Daley.
 
 08/20/2004	Minor documentation cleanups.
 
